5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1644_2704.log
== TEST (2019-04-09 16:48:38) 
-- CODE:
var1 = float(input("Nota"))
var2 = input(" sim ou n")

var3 = (var1 * 10)/100

print(var3)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:48:59) 
-- CODE:
var1 = float(input("Nota"))
var2 = input(" sim ou n")

var3 = (var1 * 10)/100

print(var3)
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:17) 
-- CODE:
var1 = float(input("Nota"))
var2 = input(" sim ou n")

var3 = (var1 * 10)/100

if var2 == "s":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:29) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "s":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:50:36) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "s":
	print(var1+var3)
else :
	print(var1)
-- EXECUTION TIME:
0.152633
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:48) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "S":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:50:53) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "S":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:00) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "S":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:51:06) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou n :")

var3 = (var1 * 10)/100

if var2 == "S":
	print(var1+var3)
else :
	print(var1)
-- EXECUTION TIME:
0.208406
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:53:57) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou na\~o :")

var3 = (var1 * 10)/100

if var2 == "S":
	print(var1+var3)
else :
	print(var1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:55) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou nao :")



if var2 == "S":
	print((var1 * 10)/100+var3)
else :
	print(var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((var1 * 10)/100+var3)
NameError: name 'var3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:58:21) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou nao :")



if var2 == "S":
	print((var1 * 10)/100+var1)
else :
	print(var1)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:58:30) 
-- CODE:
var1 = float(input("Nota :"))
var2 = input(" sim ou nao :")



if var2 == "S":
	print((var1 * 10)/100+var1)
else :
	print(var1)
-- EXECUTION TIME:
0.183334
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
